--- a/src/GroupProject/OriginalChartUI.form
+++ b/src/GroupProject/OriginalChartUI.form
@@ -109,10 +109,10 @@
                   <Component id="generatePanel" max="32767" attributes="0"/>
                   <Component id="measuresPanel" alignment="0" max="32767" attributes="0"/>
                   <Component id="dataResourcePanel" alignment="0" max="32767" attributes="0"/>
-                  <Component id="chartTypePanel" alignment="0" min="-2" pref="365" max="-2" attributes="0"/>
+                  <Component id="chartTypePanel" alignment="0" pref="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="chartDisplayPanel" pref="984" max="32767" attributes="0"/>
+              <Component id="chartDisplayPanel" pref="974" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -124,8 +124,8 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="dataResourcePanel" min="-2" pref="211" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="chartTypePanel" max="32767" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="chartTypePanel" min="-2" pref="409" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="measuresPanel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -283,18 +283,19 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="AWSDataSource" min="-2" pref="264" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="AWSBrowseButton" min="-2" pref="67" max="-2" attributes="0"/>
-                          </Group>
                           <Component id="AWSLabel" min="-2" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="AWSOkButton" min="-2" pref="71" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="AWSCancelButton" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="AWSDataSource" min="-2" pref="239" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="AWSBrowseButton" min="-2" pref="84" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -370,28 +371,22 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="measuresLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Group type="102" alignment="1" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="1" attributes="0">
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="measuresXLabel" max="32767" attributes="0"/>
-                                      <Component id="measuresYLabel" max="32767" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="measuresZLabel1" min="-2" pref="10" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                              </Group>
+                          <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="measuresXLabel" max="32767" attributes="0"/>
+                              <Component id="measuresYLabel" max="32767" attributes="0"/>
                           </Group>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="XItem" pref="224" max="32767" attributes="0"/>
                               <Component id="YItem" alignment="0" max="32767" attributes="0"/>
-                              <Component id="ZItem" alignment="0" max="32767" attributes="0"/>
                           </Group>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="measuresLabel" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
@@ -408,17 +403,12 @@
                       <Component id="measuresXLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="XItem" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace pref="30" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="YItem" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="measuresYLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="measuresZLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="ZItem" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace pref="22" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -445,13 +435,6 @@
           </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="YItem">
-        </Component>
-        <Component class="javax.swing.JLabel" name="measuresZLabel1">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Z:"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JComboBox" name="ZItem">
         </Component>
       </SubComponents>
     </Container>
